# upmem_communication_performance_test

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config_async_busywait.json  config_async_busywait_huge_batchsize.json  config_async_hashtable_busywait.json  config_async_hashtable_communication.json  config_async_vs_batchsize.json  config_sync_different_batchsize.json  config_sync_different_batchsize_large.json  config_sync_different_batchsize_not_pow2.json  config_sync_receive_different_batchsize_full.json  config_sync_receive_different_batchsize_short.json  config_sync_send_different_batchsize.json  config_sync_send_different_batchsize_full.json  config_sync_send_different_batchsize_short.json  config_sync_send_exec_receive.json  direct_interface_performance.xlsx  dpu.c  host.c  host.cpp  readme.md  upmem_direct_c.c  upmem_direct_c.h
pim_interface/: direct_interface.hpp  pim_interface.hpp  sdk_internal_functions.hpp  timer.hpp  upmem_interface.hpp
pim_interface/sdk_internals_2023.2.0/: dpu_internals.h  dpu_region_address_translation.h
workloads/: config_busy_wait.json  config_pseudo.json
workloads/async/: config_async_busywait.json  config_async_busywait_huge_batchsize.json  config_async_hashtable_busywait.json  config_async_hashtable_communication.json  config_async_vs_batchsize.json
workloads/send_receive_execute/: config_send_launch_receive.json
workloads/send_receive_execute/direct/: config_launch_receive.json  config_send_launch_receive.json
workloads/send_receive_only/direct/: config_sync_receive_128K.json  config_sync_receive_128K_wram.json  (+22 more)
(+23 files in other folders)
